--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,7 +9,8 @@ rand_core = "0.9"
 bevy_rand = "0.11"
 bevy_prng = { version = "0.11", features = ["wyrand"] }
 rand = "0.9.2"
-voronoi_mosaic = "0.2.0"
+noiz = "0.2.0"
+voronoice = "0.2.0"
 
 # Enable a small amount of optimization in the dev profile.
 [profile.dev]
