--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,8 @@ bevy_prng = { version = "0.11", features = ["wyrand"] }
 rand = "0.9.2"
 noiz = "0.2.0"
 voronoice = "0.2.0"
+bevy_common_assets = "0.13.0"
+serde = "1.0.225"
 
 # Enable a small amount of optimization in the dev profile.
 [profile.dev]
