--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,7 @@ voronoice = "0.2.0"
 bevy_common_assets = "0.13.0"
 serde = "1.0.225"
 clap = { version = "4.5.48", features = ["derive"] }
+chrono = "0.4.42"
 
 # Enable a small amount of optimization in the dev profile.
 [profile.dev]
